# GameMon

./: .gitignore  Cargo.toml  README.md  build.bkup.sh  tray.rc
.github/workflows/: build.yml
old-tauri/: Cargo.toml  README.md  config.toml  tauri.conf.json
old-tauri/src/: app.rs  config.rs  gui.rs  main.rs  tray.rs
resources/: gamemon.manifest
schemas/: gamemon.gschema.xml  gschemas.compiled
scripts/: build.sh
src/: app.rs  config.rs  gui.rs  lib.rs  logger.rs  main.rs  mod.rs  service.rs  test.rs  tray.rs  updater.rs  util.rs
src/gui/: main.rs
src/service/: app.rs  gui.rs  tray.rs
