[package]
name = "GameMon"
version = "0.1.0"
description = "Gaming Monitor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
gio = "0.20.7"
glib = "0.20.7"
iced = "0.13.1"
iced_native = "0.10.3"
image = "0.25.5"
log = "0.4"
tokio = "1.43.0"
toml = "0.8.19"
tray-icon = "0.19.2"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33.1"
notify-rust = "4.11.4"
