[package]
name = "GameMon"
version = "0.4.0"
description = "Gaming Monitor"
authors = ["Akinus21"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
gio = "0.20.7"
glib = "0.20.7"
iced = "0.13.1"
iced_native = "0.10.3"
image = "0.25.5"
log = "0.4"
tokio = { version = "1.43.0", features = ["full"]}
toml = "0.8.19"
tray-icon = "0.19.2"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33.1"
notify-rust = "4.11.4"
dashmap = "6.1.0"
gtk = "0.18.2"
gtk4 = "0.9.5"
pango = "0.20.7"
gdk-pixbuf = "0.20.7"
atk = "0.18.2"
dirs = "6.0.0"
self_update = { version = "0.42.0", features = ["archive-zip", "archive-tar"]}
reqwest = "0.12.12"
tempfile = "3.15.0"
serde_json = "1.0.137"
flate2 = "1.0.35"
tar = "0.4.43"
native-dialog = "0.7.0"
ksni = { version = "0.3", default-features = false, features = ["async-io"] }
libappindicator = "0.9.0"
