[package]
name = "GameMon"
version = "0.5.2"
description = "Gaming Monitor"
authors = ["Akinus21"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.84.0"
build = "build.rs"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld"

[[bin]]
name = "GameMon-gui"
path = "src/gui.rs"

[[bin]]
name = "GameMon-update"
path = "src/updater.rs"

[[bin]]
name = "GameMon-service"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
gio = "0.20.7"
glib = "0.20.7"
iced = { version = "0.13.1", features = ["image"] }
iced_native = "0.10.3"
image = "0.25.5"
log = "0.4"
tokio = { version = "1.43.0", features = ["full"]}
toml = "0.8.19"
tray-icon = "0.19.2"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33.1"
notify-rust = "4.11.4"
dashmap = "6.1.0"
gtk = "0.18.2"
gtk4 = "0.9.5"
pango = "0.20.7"
gdk-pixbuf = "0.20.7"
atk = "0.18.2"
dirs = "6.0.0"
self_update = { version = "0.42.0", features = ["archive-zip", "archive-tar"]}
reqwest = "0.12.12"
tempfile = "3.15.0"
serde_json = "1.0.137"
flate2 = "1.0.35"
tar = "0.4.43"
native-dialog = "0.7.0"
ksni = { version = "0.3", default-features = false, features = ["async-io"] }
once_cell = "1.20.2"
libappindicator = "0.9.0"
tray-item = { version = "0.10.0", features = ["ksni"]}
zip = "2.2.2"
winapi = "0.3.9"
winresource = "0.1.19"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory"
] }
windows = "0.59.0"


[target.'cfg(windows)'.build-dependencies]
windres = "0.2"
embedinator = "0.1.0"
embed-resource = "3.0.1"
winresource = "0.1.19"
